--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html xmlns:wb="http://open.weibo.com/wb">  
   <head>
     <title> Kono Digital Inc. </title> 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" /> 
-    <link rel="shortcut icon" href="img/favicon.ico" /> 
-    <link rel="stylesheet" type="text/css" media="screen" href="css/Info.css" /> 
+    <link rel="icon" href="compass/images/favicon.ico" type="image/x-icon" /> 
+    <link rel="shortcut icon" href="compass/images/favicon.ico" /> 
+    <link rel="stylesheet" type="text/css" media="screen" href="compass/stylesheets/Info.css" /> 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
   </head>
   <body>
@@ -42,7 +43,7 @@
       <div class="logo-description">
         <div class="logo-title"></div>
         <div class="app-store">
-          <a href="http://itunes.apple.com/tw/app/id477224666" target="_blank"><img src="img/logo/btn_appstore.png"></a>
+          <a href="http://itunes.apple.com/tw/app/id477224666" target="_blank"><img src="compass/images/logo/btn_appstore.png"></a>
         </div>
         <div class="prompt">
           <p class="prompt-text">加入粉絲團，</p>
@@ -136,24 +137,24 @@
       <!--<div class="contact-title"></div>-->
       <div class="contact-info">
         <ul class="contact-list">
-          <li class="e-mail"><img src="./img/contact/contact_mail.png" width="16" height="16"><span>info@thekono.com</span></li>
-          <li class="phone"><img src="./img/new_icon/icon_telephone.png" width="16" height="16"><span>02 2733 2666</span></li>
-          <li class="address-taiwan"><img src="./img/contact/location_icon.png" width="16" height="16"><span>台北市基隆路二段91號5樓</span></li>
-          <li class="address-us-1"><img class="address-img" src="./img/contact/location_icon.png" width="16" height="16"><div class="address-div">229 Polaris Ave Suite 9, Mountain View, CA 94043 USA</div></li>
+          <li class="e-mail"><img src="./compass/images/contact/contact_mail.png" width="16" height="16"><span>info@thekono.com</span></li>
+          <li class="phone"><img src="./compass/images/new_icon/icon_telephone.png" width="16" height="16"><span>02 2733 2666</span></li>
+          <li class="address-taiwan"><img src="./compass/images/contact/location_icon.png" width="16" height="16"><span>台北市基隆路二段91號5樓</span></li>
+          <li class="address-us-1"><img class="address-img" src="./compass/images/contact/location_icon.png" width="16" height="16"><div class="address-div">229 Polaris Ave Suite 9, Mountain View, CA 94043 USA</div></li>
         </ul>
       </div>
       <div class="other-links">
         <ul class="link-list">
-          <li class="facebook-link"><a href="http://www.facebook.com/thekono" target="_blank"><img src="./img/new_icon/icon_fb.png"></a></li>
-          <li class="twitter-link"><a href="https://twitter.com/thekono" target="_blank"><img src="./img/new_icon/icon_twitter.png"></a></li>
-          <li class="youtube-link"><a href="http://www.youtube.com/watch?v=oeycEveRpSE" target="_blank"><img src="./img/new_icon/icon_youtube.png"></a></li>
-          <li class="kono-link"><a href="http://blog.thekono.com/index.html/" target="_blank"><img src="./img/new_icon/icon_k.png"></a></li>
+          <li class="facebook-link"><a href="http://www.facebook.com/thekono" target="_blank"><img src="./compass/images/new_icon/icon_fb.png"></a></li>
+          <li class="twitter-link"><a href="https://twitter.com/thekono" target="_blank"><img src="./compass/images/new_icon/icon_twitter.png"></a></li>
+          <li class="youtube-link"><a href="http://www.youtube.com/watch?v=oeycEveRpSE" target="_blank"><img src="./compass/images/new_icon/icon_youtube.png"></a></li>
+          <li class="kono-link"><a href="http://blog.thekono.com/index.html/" target="_blank"><img src="./compass/images/new_icon/icon_k.png"></a></li>
         </ul>
       </div>
       <div class="subscribe">
         <ul class="subscribe-list">
-          <li><input type="text" class="subscribe-email" id="subscribe-email-bottom" value="請輸入您的email，取得最新資訊"></li>
-          <li class="subscribe-send-bottom"><img src="./img/logo/submit.png" width="25" height="30" ></li>
+          <li><input type="text" class="subscribe-email" size="5" id="subscribe-email-bottom" value="請輸入您的email，取得最新資訊"></li>
+          <li class="subscribe-send-bottom"><img src="./compass/images/logo/submit.png" width="25" height="30" ></li>
         </ul>
       </div>
       <div class="footer"><span>© Copyright 2011 - 2012 kono Digital Inc. All Rights Reserved.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> <a href="https://www.thekono.com/terms" style="text-decoration: none" target="_blank">使用條款</a></div>
